# etl-studio

./: .dockerignore  .gitignore  Dockerfile.base  Dockerfile.chatbot  Makefile  README.md  coveragerc.config  docker-compose.yml  etl-studio-test.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: tests.yml
.streamlit/: config.toml
data/bronze/: customers.csv  orders.csv  products.csv
docs/: README.md  cleaning-api.md  gold-api.md  silver-api.md
extra_requirements/: test.txt
src/etl_studio/: __init__.py  config.py
src/etl_studio/ai/: Dockerfile.chatbot  __init__.py  chatbot.py  chatbot_sql.py  model.py
src/etl_studio/api/: Dockerfile  __init__.py  chatbot_api.py  constants.py  main.py
src/etl_studio/api/routes/: __init__.py  bronze.py  chatbot.py  gold.py  silver.py
src/etl_studio/api/schemas/: __init__.py  bronze.py  chatbot.py  gold.py  silver.py
src/etl_studio/app/: Dockerfile  __init__.py  components.py  data.py  main.py  mock_data.py
src/etl_studio/app/pages/: 1_Bronze.py  2_Silver.py  3_Gold.py  4_ML_Model.py  4_Modelo_Predictivo.py  5_Chatbot.py  __init__.py  chatbot_page.py  cleaning_page.py  gold_page.py  ingest_page.py  mock_data.py  model_page.py
src/etl_studio/etl/: __init__.py  bronze.py  gold.py  silver.py
src/etl_studio/mlflow/: Dockerfile
src/etl_studio/postgres/: Dockerfile  bronze.py  gold.py  init_db.py  postgres.py  silver.py
src/postgres/: .dockerignore  README.md  init_db.py
test/: bronze.py  test_bronze.py  test_gold.py  test_sanity.py  test_silver.py
