[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "etl-studio"
version = "0.1.0"
description = "Lightweight Streamlit platform for collaborative data workflows"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.38.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["etl_studio*"]
