[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "etl-studio"
version = "0.1.0"
description = "Lightweight Streamlit platform for collaborative data workflows"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.38.0",
    "pandas>=2.2.0",
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.2.1",
    "SQLAlchemy>=2.0.44",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["etl_studio*"]
